--- a/qwerHello/Podfile
+++ b/qwerHello/Podfile
@@ -1,4 +1,12 @@
-platform :ios, '7.0'
+
+source 'https://github.com/CocoaPods/Specs.git'       
+
+source 'https://github.com/sanxxwu/swRepo.git'       
+
+platform :ios, '9.0'
+use_frameworks!
 target 'qwerHello' do
+
+pod '02Extension'
 
 end
